--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "~4.16.0",
     "express-fileupload": "^0.4.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "moment": "^2.22.1",
+    "morgan": "~1.9.0",
+    "object-hash": "^1.3.0"
   }
 }
