--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.2",
     "moment": "^2.22.1",
     "morgan": "~1.9.0",
-    "object-hash": "^1.3.0"
+    "object-hash": "^1.3.0",
+    "sharp": "^0.20.1"
   }
 }
